@@ -1,10 +1,14 @@
 package com.ymd.jvm.lean.StringTable;
 
+/**
+ * 演示 StringTable 垃圾回收
+ * -Xmx10m -XX:+PrintStringTableStatistics -XX:+PrintGCDetails -verbose:gc
+ */
 public class Demo1_7 {
     public static void main(String[] args) {
         int i = 0;
         try {
-            for (int j = 0; j < 20000; j++) {
+            for (int j = 0; j < 20000; j++) {// j=100, j=10000
                 String.valueOf(j).intern();
                 i++;
             }
